package bg.tu_varna.sit.commands;

public interface ExecuteCommand {
    void execute() throws Exception;
}
