package bg.tu_varna.sit.commands;

public interface RunCLI {
    void runCommand() throws Exception;
}
